--- a/writeups/cogsci2021/conceptviz/conceptviz.Rmd
+++ b/writeups/cogsci2021/conceptviz/conceptviz.Rmd
@@ -22,7 +22,8 @@ keywords: >
     Add your choice of indexing terms or keywords; kindly use a semi-colon; between each term.
     
 output: cogsci2016::cogsci_paper
-#final-submission: \cogscifinalcopy
+final-submission: \cogscifinalcopy
+
 ---
 
 ```{r global_options, include=FALSE}
